clang/test/CIR/IR/invalid-cmp3way.cir
// RUN: cir-opt %s -verify-diagnostics -split-input-file

!s32i = !cir.int<s, 32>
!s8i = !cir.int<s, 8>

module {
  // Total ordering must not include unordered.
  cir.func @cmp3way_total_with_unordered(%arg0 : !s32i, %arg1 : !s32i) -> !s8i {
    // expected-error@+1 {{total ordering does not include unordered ordering}}
    %0 = cir.cmp3way #cir.cmp3way_info<total, lt = -1, eq = 0, gt = 1, unordered = -127> %arg0, %arg1 : !s32i -> !s8i
    cir.return %0 : !s8i
  }
}

// -----

!s32i = !cir.int<s, 32>
!s8i = !cir.int<s, 8>

module {
  // Partial ordering must include unordered.
  cir.func @cmp3way_partial_without_unordered(%arg0 : !s32i, %arg1 : !s32i) -> !s8i {
    // expected-error@+1 {{partial ordering lacks unordered ordering}}
    %0 = cir.cmp3way #cir.cmp3way_info<partial, lt = -1, eq = 0, gt = 1> %arg0, %arg1 : !s32i -> !s8i
    cir.return %0 : !s8i
  }
}
